[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulationsgov-mcp"
version = "0.1.0"
description = "MCP server for the Regulations.gov API. Federal rulemaking dockets, documents, comments, and comment period tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "regulations", "rulemaking", "far", "dockets", "comments", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/regulationsgov-mcp"

[project.scripts]
regulationsgov-mcp = "regulationsgov_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/regulationsgov_mcp"]
