[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usaspending-gov-mcp"
version = "0.1.3"
description = "MCP server for USASpending.gov federal contract and award data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "usaspending", "federal-contracts", "procurement", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/usaspending-gov-mcp"
Issues = "https://github.com/1102tools/usaspending-gov-mcp/issues"

[project.scripts]
usaspending-mcp = "usaspending_gov_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/usaspending_gov_mcp"]
