[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bls-oews-mcp"
version = "0.2.2"
description = "MCP server for the BLS Occupational Employment and Wage Statistics (OEWS) API. Market wage data for IGCEs and price analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "bls", "oews", "wages", "igce", "federal-contracts", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/bls-oews-mcp"

[project.scripts]
bls-oews-mcp = "bls_oews_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bls_oews_mcp"]
