[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecfr-mcp"
version = "0.2.2"
description = "MCP server for the eCFR (Electronic Code of Federal Regulations) API. Read FAR, DFARS, and all agency FAR supplements."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "ecfr", "cfr", "far", "dfars", "federal-acquisition", "regulations", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/federal-contracting-mcps"
Issues = "https://github.com/1102tools/federal-contracting-mcps/issues"

[project.scripts]
ecfr-mcp = "ecfr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecfr_mcp"]
