[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federal-register-mcp"
version = "0.2.3"
description = "MCP server for the Federal Register API. Proposed rules, final rules, notices, executive orders, and regulatory tracking."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "federal-register", "rulemaking", "far", "regulations", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/federal-contracting-mcps"
Issues = "https://github.com/1102tools/federal-contracting-mcps/issues"

[project.scripts]
federal-register-mcp = "federal_register_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/federal_register_mcp"]
