[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsa-calc-mcp"
version = "0.2.7"
description = "MCP server for the GSA CALC+ Labor Ceiling Rates API. GSA MAS schedule rate benchmarking for IGCEs and price analysis."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "gsa", "calc", "ceiling-rates", "igce", "pricing", "federal-contracts", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/federal-contracting-mcps"
Issues = "https://github.com/1102tools/federal-contracting-mcps/issues"

[project.scripts]
gsa-calc-mcp = "gsa_calc_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gsa_calc_mcp"]
