[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsa-perdiem-mcp"
version = "0.2.3"
description = "MCP server for GSA Per Diem Rates API. Federal travel lodging and M&IE rates for IGCEs and travel cost estimation."
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "gsa", "per-diem", "travel", "lodging", "mie", "federal-contracts", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/federal-contracting-mcps"
Issues = "https://github.com/1102tools/federal-contracting-mcps/issues"

[project.scripts]
gsa-perdiem-mcp = "gsa_perdiem_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gsa_perdiem_mcp"]
