[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sam-gov-mcp"
version = "0.3.3"
description = "MCP server for SAM.gov entity registration, exclusion, contract opportunity, and contract award data"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "James Jenrette / 1102tools" }
]
keywords = ["mcp", "model-context-protocol", "sam.gov", "federal-contracts", "procurement", "exclusions", "debarment", "contract-awards", "FPDS", "1102"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://1102tools.com"
Repository = "https://github.com/1102tools/federal-contracting-mcps"
Issues = "https://github.com/1102tools/federal-contracting-mcps/issues"

[project.scripts]
sam-gov-mcp = "sam_gov_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_gov_mcp"]
